Fixed height issue with today view
Due to the fade in - fade out of the loader, the position was set to absolute. This resulted in a container with a height of 0, which in turn overlapped with other elements. The wrapper calculates the height based on the items of the schedule multiplied by 100px

--- a/src/components/ScheduleToday/ScheduleToday.css
+++ b/src/components/ScheduleToday/ScheduleToday.css
@@ -3,6 +3,12 @@
   font-weight: bold;
 }
 
+.SchedToday--wrapper{
+  max-width: 500px;
+  min-height: fit-content;
+  height: fit-content;
+}
+
 .SchedToday--container{
   display: grid;
   grid-row-gap: 15px;
@@ -126,8 +132,6 @@
     margin: 0 20px;
   }
 }
-
-
 
 @media screen and (max-width: 800px) {
   .SchedToday--title{
